# vehicle-weather-shield

./: LICENSE  README.md  hacs.json  pyproject.toml  todo.md
.github/workflows/: validate.yml
custom_components/vehicle_weather_shield/: .gitignore  __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/vehicle_weather_shield/translations/: en.json  nl.json
docs/: 01-PRD.md  02-Architecture.md  03-Roadmap.md  07-Release.md  Backlog.md
tests/: test_init.py
