[project]
name = "vehicle-weather-shield"
version = "0.1.0"
description = "Home Assistant integration for vehicle weather protection"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"